--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    
     <link rel="stylesheet" href="mainofc.css">
     <title>Tempero Baiano</title>
 </head>
@@ -41,15 +42,15 @@
         <div class="carousel slide" data-bs-ride="carousel" id="carousel" >
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="1000">
-                    <img src="./img/acarajé.jpg" alt="acarajé">
+                    <img class="img-fluid" src="./img/acarajé.jpg" alt="acarajé">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="./img/mungunza.jpg" alt="mungunza" data-bs-interval="1000">
+                    <img class="img-fluid" src="./img/mungunza.jpg" alt="mungunza" data-bs-interval="1000">
                 </div>
                 
                 <div class="carousel-item">
-                    <img src="./img/beiju.jpg" alt="beiju" data-bs-interval="1000">
+                    <img class="img-fluid" src="./img/beiju.jpg" alt="beiju" data-bs-interval="1000">
                 </div>
                 <button class="carousel-control-prev" data-bs-slide="prev" data-bs-target="#carousel">
                     <span class="carousel-control-prev-icon"></span>
@@ -67,18 +68,18 @@
         <div id="sobre-restaurante" class="pt-4">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
-                        <img class="w-100 mb-4" src="./img/dentro-restaurante.jpg" alt="Dentro dor restaurante">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <img class="w-100 rounded mb-4" src="./img/dentro-restaurante.jpg" alt="Dentro dor restaurante">
                     </div>
-                    <div class="col-md-6" id="section-sobre">
-                        <h2 class="title pb-3">Sobre o <span class="title-color">Tempero Baiano</span></h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores tempora ipsam quo magnam ipsum quis sit quod tempore dolor sunt perferendis vero</p>
-                        <h2 class="title pb-3">Sobre o <span class="title-color">espaço</span></h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas aut pariatur dolorem ex sit culpa tempora natus nulla a.</p>
+                    <div class="col-lg-4 col-md-6 col-sm-12" id="section-sobre">
+                        <h2 class="title h3 pb-3">Sobre o <span class="title-color">Tempero Baiano</span></h2>
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores tempora ipsam quo magnam ipsum quis sit quod tempore dolor sunt perferendis vero</p>
+                        <h2 class="title h3 pb-3">Sobre o <span class="title-color">espaço</span></h2>
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas aut pariatur dolorem ex sit culpa tempora natus nulla a.</p>
                         <ul>
-                            <li>Item 1</li>
-                            <li>Item 2</li>
-                            <li>Item 3</li>
+                            <li class="lista-texto">Item 1</li>
+                            <li class="lista-texto">Item 2</li>
+                            <li class="lista-texto">Item 3</li>
                         </ul>
                     </div>
                 </div>
@@ -90,27 +91,27 @@
                     <h2 class="title">Eventos do<span id="title-eventos">restaurante</span></h2>
                 </div>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
                         <img class="w-100 rounded mb-2" src="./img/forro.webp" alt="forro"/>
-                        <h3 id="sub-title">Forró</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam at esse quos dicta debitis laudantium ipsum vitae porro consequuntur quaerat sequi mollitia excepturi distinctio, laboriosam perferendis ipsa! Est, totam natus?</p>
+                        <h3 class="h6" id="sub-title">Forró</h3>
+                        <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam at esse quos dicta debitis laudantium ipsum vitae porro consequuntur quaerat sequi mollitia excepturi distinctio, laboriosam perferendis ipsa! Est, totam natus?</p>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
                         <img class="w-100 rounded mb-2" src="./img/pagode.jpg" alt="pagode"/>
-                        <h3 id="sub-title">Pagode Baiano</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam at esse quos dicta debitis laudantium ipsum vitae porro consequuntur quaerat sequi mollitia excepturi distinctio, laboriosam perferendis ipsa! Est, totam natus?</p>
+                        <h3 class="h6" id="sub-title">Pagode Baiano</h3>
+                        <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam at esse quos dicta debitis laudantium ipsum vitae porro consequuntur quaerat sequi mollitia excepturi distinctio, laboriosam perferendis ipsa! Est, totam natus?</p>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
                         <img class="w-100 rounded mb-2" src="./img/arrocha.webp" alt="arocha"/>
-                        <h3 id="sub-title">Arrocha</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam at esse quos dicta debitis laudantium ipsum vitae porro consequuntur quaerat sequi mollitia excepturi distinctio, laboriosam perferendis ipsa! Est, totam natus?</p>
+                        <h3 class="h6" id="sub-title">Arrocha</h3>
+                        <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam at esse quos dicta debitis laudantium ipsum vitae porro consequuntur quaerat sequi mollitia excepturi distinctio, laboriosam perferendis ipsa! Est, totam natus?</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <footer>
-        <p>2023 &copy; Tempero Baiano - Todos os direitos reservados</p>
+        <p class="lead">2023 &copy; Tempero Baiano - Todos os direitos reservados</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
