Alterando fotos e corrigindo bugs

--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
     <section data-bs-spy="scroll" data-bs-target="header" data-bs-smooth-scroll="true"> 
         <div class="carousel slide" data-bs-ride="carousel" id="carousel" >
             <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="1000">
+                <div class="carousel-item active" data-bs-interval="2000">
                     <img class="img-fluid" src="./img/acarajé.jpg" alt="acarajé">
                 </div>
 
                 <div class="carousel-item">
-                    <img class="img-fluid" src="./img/mungunza.jpg" alt="mungunza" data-bs-interval="1000">
+                    <img class="img-fluid" src="./img/mugunza.avif" alt="mungunza" data-bs-interval="2000">
                 </div>
                 
                 <div class="carousel-item">
-                    <img class="img-fluid" src="./img/beiju.jpg" alt="beiju" data-bs-interval="1000">
+                    <img class="img-fluid" src="./img/beiju.jpg" alt="beiju" data-bs-interval="2000">
                 </div>
                 <button class="carousel-control-prev" data-bs-slide="prev" data-bs-target="#carousel">
                     <span class="carousel-control-prev-icon"></span>
