--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-12">
-                        <img class="w-100 rounded mb-4" src="./img/dentro-restaurante.jpg" alt="Dentro dor restaurante">
+                        <img id="sobrerestaurante-img" class="w-100 rounded pb-4" src="./img/dentro-restaurante.jpg" alt="Dentro dor restaurante">
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12" id="section-sobre">
                         <h2 class="title h3 pb-3">Sobre o <span class="title-color">Tempero Baiano</span></h2>
@@ -88,21 +88,21 @@
         <div class="div" id="eventos">
             <div class="container">
                 <div class="row">
-                    <h2 class="title">Eventos do<span id="title-eventos">restaurante</span></h2>
+                    <h2 class="title mb-5">Eventos do<span id="title-eventos">restaurante</span></h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-12">
-                        <img class="w-100 rounded mb-2" src="./img/forro.webp" alt="forro"/>
+                        <img id="eventos-img" class="w-100 rounded mb-2" src="./img/forro.webp" alt="forro"/>
                         <h3 class="h6" id="sub-title">Forró</h3>
                         <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam at esse quos dicta debitis laudantium ipsum vitae porro consequuntur quaerat sequi mollitia excepturi distinctio, laboriosam perferendis ipsa! Est, totam natus?</p>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
-                        <img class="w-100 rounded mb-2" src="./img/pagode.jpg" alt="pagode"/>
+                        <img id="eventos-img" class="w-100 rounded mb-2" src="./img/pagode.jpg" alt="pagode"/>
                         <h3 class="h6" id="sub-title">Pagode Baiano</h3>
                         <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam at esse quos dicta debitis laudantium ipsum vitae porro consequuntur quaerat sequi mollitia excepturi distinctio, laboriosam perferendis ipsa! Est, totam natus?</p>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
-                        <img class="w-100 rounded mb-2" src="./img/arrocha.webp" alt="arocha"/>
+                        <img id="eventos-img" class="w-100 rounded mb-2" src="./img/arrocha.webp" alt="arocha"/>
                         <h3 class="h6" id="sub-title">Arrocha</h3>
                         <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam at esse quos dicta debitis laudantium ipsum vitae porro consequuntur quaerat sequi mollitia excepturi distinctio, laboriosam perferendis ipsa! Est, totam natus?</p>
                     </div>
