--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="div" id="eventos">
             <div class="container">
                 <div class="row">
-                    <h2 class="title mb-5">Eventos do<span id="title-eventos">restaurante</span></h2>
+                    <h2 class="title mb-3">Eventos do<span id="title-eventos">restaurante</span></h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-12">
@@ -111,7 +111,7 @@
         </div>
     </section>
     <footer>
-        <p class="lead">2023 &copy; Tempero Baiano - Todos os direitos reservados</p>
+        <p class="mt-5 lead">2023 &copy; Tempero Baiano - Todos os direitos reservados</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
